--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Jerusalem G</a>.
+        >. Coded by <a href="https://github.com/jerusalem-dev/FM-Solution_Recipe-Page-Main">Jerusalem G</a>.
       </p>
     </footer>
   </body>
